fix dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -117,6 +117,9 @@ a{
 body{
     background-color: white; 
 }
+[data-bs-theme="dark"] body{
+    background-color: #212529;
+}
 
 
 footer{
